# trial-cpp

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  trial-cpp.code-workspace
components/machine/: CMakeLists.txt  permission_impl.cpp  permission_impl.hpp  property_value.cpp  resolution.cpp  resolution_impl.cpp  resolution_impl.hpp  value255.cpp  value_resolution.cpp
components/machine/include/: boolean_property_spec.hpp  component.hpp  namespace.hpp  permission.hpp  prop_value.hpp  property.hpp  property_format.hpp  property_spec.hpp  property_value.hpp  resolution.hpp  value255.hpp  value_resolution.hpp
components/machine/property/: format_impl.cpp  format_impl.hpp  permission_impl.cpp  permission_impl.hpp  resolution_impl.cpp  resolution_impl.hpp  spec.cpp  stub.cpp
components/machine/property/include/: format.hpp  format_format.hpp  permission.hpp  (+6 more)
components/util/include/: hash_util.hpp  integer_util.hpp
components/value/: CMakeLists.txt  value255.cpp
components/value/include/: value255.hpp  value255_format.hpp
components/value/test/: CMakeLists.txt  test_value255.cpp
main/: CMakeLists.txt  hello_world_main.cpp  mutex.cpp  mutex.hpp
stock/: component.hpp  property.hpp  property_format.hpp  property_spec.cpp  property_spec.hpp  unit.hpp
stock/main/: CMakeLists.txt  hello_world_main.cpp
stock/value/: ==CMakeLists.txt
stock/value_test/: __CMakeLists.txt  test_value255.cpp
test/: CMakeLists.txt  sdkconfig
test/main/: CMakeLists.txt  test_main.cpp
test_value255/: CMakeLists.txt  README.md  sdkconfig
test_value255/main/: CMakeLists.txt
